--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "test-dev": "npm run test -- --watch"
+    "test-dev": "npm run test -- --watch",
+    "test:dev": "DATABASE_URL=postgres://localhost/acme_db npm run test -- --watch",
+    "start:dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "express": "^4.17.1",
